# habbi-test-microservice

./: README.md
HabbiT/: .env  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
HabbiT/api_habbi/: main.py
HabbiT/api_habbi/config/: config.py
HabbiT/api_habbi/models/: models.py
HabbiT/api_habbi/queries/: queries.py
HabbiT/api_habbi/routes/: routes.py
HabbiT/tests/: test_query.py
